Ubuntu theme + fixes

--- a/data/style.css
+++ b/data/style.css
@@ -3,6 +3,19 @@
     background-color: @headerbar_bg_color;
 }
 
+.custom-headerbar.backdrop {
+    background-color: var(--headerbar-backdrop-color);
+    transition: background-color 200ms ease-out;
+  }
+  
+  .custom-headerbar.backdrop > windowhandle {
+    filter: opacity(0.5);
+    transition: filter 200ms ease-out;
+  }
+.transparent-window {
+    background-color: transparent;
+}
+
 tabbar {
     margin-bottom: 100px;
 }
